# deep-learning-project

./: AGENTS.md  README.md  create-structure.ps1  main.py  project-structure.md  pyproject.toml  requirements.txt  setup.py  train.py
configs/: base.yaml  default.yaml  train.yaml
configs/data/: cifar10.yaml  default_data.yaml
configs/experiment/: baseline.yaml
configs/inference/: default.yaml
configs/model/: default_model.yaml  transformer.yaml
configs/trainer/: default_trainer.yaml
project_name/: __init__.py
project_name/data/: __init__.py  base.py  datasets.py
project_name/metrics/: __init__.py  registry.py
project_name/models/: __init__.py  base.py  registry.py  transformer.py
project_name/trainers/: base.py  supervised.py
project_name/utils/: __init__.py  checkpointing.py  logging.py  reproducibility.py
project_name/workspace/: __init__.py  base.py
scripts/: evaluate.py  sweep.py  train.py  train_fabric.py
src/callbacks/: __init__.py  callbacks.py
src/data/: datamodule_py
src/evaluations/: evaluator.py
src/models/: __init__.py  lit_module.py
src/models/components/: __init__.py  simple_net.py
src/trainers/: trainer.py
src/utils/: __init__.py  helpers.py
tests/: test_data.py  test_models.py  test_trainer.py
