[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "deep-learning-research-template"
version = "0.1.0"
description = "High-performance PyTorch template with Hydra, Lightning, and W&B"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision",
    "lightning>=2.1.0",       # The modern unified package
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
    "transformers>=4.35.0",
    "diffusers>=0.24.0",
    "accelerate>=0.25.0",
    "einops>=0.7.0",
    "rich>=13.0.0"            # For beautiful terminal output
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://dzungphieuluuky.github.io"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dzungphieuluuky/<repository-name>.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
